refactor AppContainer into four different classes for distribution of responsibility and finalize JLineCliService