@@ -9,4 +9,4 @@ RUN mvn package
 FROM eclipse-temurin:25-jre-alpine
 WORKDIR /app
 COPY --from=build /app/target/avisos-1.0-SNAPSHOT.jar app.jar
-ENTRYPOINT ["java","-jar","app.jar"]
+ENTRYPOINT ["--enable-native-access=ALL-UNNAMED","java","-jar","app.jar"]
